Basic HTML for homepage

--- a/index.html
+++ b/index.html
@@ -1,9 +1,50 @@
+<!-- Doctype HTML5 -->
 <!doctype html>
 <html lang="en-us">
+
 <head>
-  <title>Kyle Loertscher</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Kyle Loertscher WDD 230</title>
+  <meta name="description"
+    content="Assignment portal for Kyle Loertscher in WDD 230: Web Frontend Development at Brigham Young University - Idaho. Fall semester 2020.">
 </head>
+
 <body>
- <h1>Kyle Loertscher</h1>
+  <header>
+    <h1>Kyle Loertscher</h1>
+  </header>
+
+  <div>
+    <h2>CIT 230: Assignmnet Portal</h2>
+  </div>
+  <div>
+    <ul>
+      <li>Lesson 02: <a href="#">Assignment Link</a></li>
+      <li>Lesson 03: <a href="#">Assignment Link</a></li>
+      <li>Lesson 04: <a href="#">Assignment Link</a></li>
+      <li>Lesson 05: <a href="#">Assignment Link</a></li>
+      <li>Lesson 06: <a href="#">Assignment Link</a></li>
+      <li>Lesson 07: <a href="#">Assignment Link</a></li>
+      <li>Lesson 08: <a href="#">Assignment Link</a></li>
+      <li>Lesson 09: <a href="#">Assignment Link</a></li>
+      <li>Lesson 10: <a href="#">Assignment Link</a></li>
+      <li>Lesson 11: <a href="#">Assignment Link</a></li>
+      <li>Lesson 12: <a href="#">Assignment Link</a></li>
+      <li>Lesson 13: <a href="#">Assignment Link</a></li>
+    </ul>
+  </div>
+
+  <footer>
+    <div>
+    <ul>
+      <li> &#169; 2020 </li>
+      <li>Kyle Loertscher</li>
+      <li>Utah</li>
+      <li><a href="https://www.byui.edu/online">BYUI Online Learning</a></li>
+    </ul></div>
+    <div id="lastUpdated"></div>
+  </footer>
 </body>
-</html>  
+
+</html>
