--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
 <body>
   <header>
     <h1>Kyle Loertscher</h1>
+    <img src="img/Family_Picture_2020_optimized.jpg" alt="Kyle his wife Hayley and is 2 year old daughter Hazel">
   </header>
 
   <div>
-    <h2>CIT 230: Assignmnet Portal</h2>
+    <h2>CIT 230: Assignment Portal</h2>
   </div>
   <div>
     <ul>
@@ -46,5 +47,8 @@
     <div id="lastUpdated"></div>
   </footer>
 </body>
+<script>
+  document.getElementById("lastUpdated").innerHTML = "Last Updated: " + document.lastModified;
+</script>
 
 </html>
