further css refinement

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <header>
     <h1>Kyle Loertscher</h1>
-    <img src="img/Family_Picture_2020_optimized.jpg" alt="Kyle his wife Hayley and is 2 year old daughter Hazel">
+    <img src="img/Family_Picture_2020_optimized.jpg" alt="Kyle his wife Hayley and his 2 year old daughter Hazel">
   </header>
 
   <main>
