--- a/index.html
+++ b/index.html
@@ -39,14 +39,9 @@
     </div>
   </main>
   <footer>
-    <div>
-      <ul>
-        <li id="currentYear"></li>
-        <li>Kyle Loertscher</li>
-        <li>Utah</li>
-        <li><a href="https://www.byui.edu/online">BYUI Online Learning</a></li>
-      </ul>
-    </div>
+    
+    <span id="copyRightInfo"></span>
+    <br>
     <div id="lastUpdated"></div>
   </footer>
   <script src="/js/lastUpdated.js"></script>
